--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,15 +1,17 @@
 Package: umlr
-Title: Statistical Software Development with UML and R
-Depends: oosp (>= 0.2.0)
-Version: 0.1.1
-Date: 2010-01-20
-Author: CHARLOTTE MAIA
+Title: Open Source Development with UML and R
+Depends: ofp (>= 0.4.0)
+Version: 0.2.0
+Date: 2010-05-10
+Author: Charlotte Maia
 Maintainer: Charlotte Maia <maiagx@gmail.com>
-Description: Very early and very rough (hence very limited) prototype
-        for developing statistical software with UML and R, with an
-        emphasis on using (both Latex-friendly and GUI-based) UML class
-        diagrams for object oriented design and visualisation.
+Description: A package for producing R-based UML diagrams (currently
+        inheritance diagrams only). Model specification is
+        programmatic, however a simple GUI can be used for layout.
+        There's a strong emphasis on producing software documentation
+        (i.e. using mostly-conceptual models and static vector
+        graphics). This package is incomplete and experimental.
 License: GPL (>= 2)
-Packaged: 2010-01-20 08:49:16 UTC; maia
+Packaged: 2010-05-10 00:12:09 UTC; maia
 Repository: CRAN
-Date/Publication: 2010-01-20 13:11:18
+Date/Publication: 2010-05-10 05:27:58
